cargo-features = ["workspace-inheritance"]

[package]
name = "rust_challenge"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
ethers = { version = "2.0.10", features = ["rustls", "ws"]}
anyhow.workspace = true
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
serde.workspace = true
serde_json.workspace = true